Fix layout bug

--- a/css/main.css
+++ b/css/main.css
@@ -182,7 +182,7 @@ input:checked + .slider:before {
 
 /* RIGHT SCREEN */
 .right {
-  background-image: url("https://images.unsplash.com/photo-1446776811953-b23d57bd21aa?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=752&q=80");
+  background-image: url("../images/earth_space.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -261,7 +261,7 @@ form {
   width: 90%;
   max-height: 100px;
   margin: 8px;
-  padding: 8px;
+  padding: 5px;
   background-color: #4bb7d8;
   background-image: linear-gradient(to right, #78d2ed, #4bb7d8);
   color: #ffffff;
